--- a/source/Forms/ImportAdvancedOptionsDialog.resx
+++ b/source/Forms/ImportAdvancedOptionsDialog.resx
@@ -144,6 +144,13 @@
   <metadata name="FormattingTabPage.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="FloatingPointDataAsDecimalCheckBox.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <data name="FloatingPointDataAsDecimalCheckBox.ToolTip" xml:space="preserve">
+    <value>Enable this option to import all floating-point data as DECIMAL that prevents the differences between stored numbers in the database and how they are imported to Excel.
+This behavior affects FLOAT and DOUBLE data types, which follow the IEEE-754 standard and are stored as an approximate value. DECIMAL data is stored as an exact value.</value>
+  </data>
   <metadata name="FormatTimeLabel.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
