Bug #29625731 - CLOSING EMPTY WORKBOOK GIVES A PROMPT TO SAVE CHANGES WHEN THERE ARE NONE
- Modified the InitializeWorkbook method so it does not call methods that adds metadata to the workbook (Workbook.CreateMySqlTableStyle and WorkbookConnectionInfos.LoadForWorkbook) and so that any initialization is not done on new workbooks. Modified the Application_WorkbookActivate method so that it no longer calls InitializeWorkbook. Modified the Application_WorkbookDeactivate method so that it does not updates Edit Dialog visibility if the workbook is being closed. (source/ThisAddIn.cs)
- Modified the GetWorkbookConnectionInfos method so that if the workbook connection information has not been retrieved yet, it is retrieved now on-demand, as opposed as before where it was being done at the workbook initialization time. Removed the LoadForWorkbook method. Modified the MigrateConnectionInfosFromSettingsFileToCustomProperties method so that it does not do anything if the migration already took place or if the workbook is already flagged to store its metadata as XML parts. (source/Classes/WorkbookConnectionInfos.cs)
- Modified the InitializeConnectionObjects method so it creates the default MySQL table style if not present in the worklog. (source/Classes/ImportConnectionInfo.cs)
- Modified the Workbook.ListTableStyles extension method to add a new parameter to indicate whether the default MySQL style name is added to the list if it's not in the workbook's styles list. This ensures the style is not created when the workbook is initialized and it's only added when really needed. (source/Classes/ExcelUtilities.cs, source/Forms/ImportAdvancedOptionsDialog.cs)

--- a/CHANGES
+++ b/CHANGES
@@ -18,6 +18,10 @@
   (MySQL Bug #86723, Bug #26301455 - MYSQL FOR EXCEL WON'T SAVE TIME BACK TO MYSQL DATABASE)
 - Fixed a bug where committed data was not being recognized by the Edit Data dialog for subsequent commits.
   (MySQL Bug #87642, Bug #27365464 - DURING EDIT MODE, COMMIT BEHAVES UNEXPECTEDLY AFTER REVERT/REFRESH FROM DB)
+- Changed the way connections information used for Import and Edit Data operations is stored as workbook XML part so that the metadata is not created when
+  the workbook is initially created, but when the Import and Edit Data operations are performed. This solves the issue of Excel prompting for saving changes
+  when there are no apparent data changes to the workbook.
+  (MySQL Bug #94959, Bug #29625731 - CLOSING EMPTY WORKBOOK GIVES A PROMPT TO SAVE CHANGES WHEN THERE ARE NONE)
 
 1.3.7
 - Changed the behavior of how the "First Row Contains Column Names" selection affects the Data Type for columns. The value of the aforementioned checkbox
