--- a/CHANGES
+++ b/CHANGES
@@ -22,6 +22,9 @@
   the workbook is initially created, but when the Import and Edit Data operations are performed. This solves the issue of Excel prompting for saving changes
   when there are no apparent data changes to the workbook.
   (MySQL Bug #94959, Bug #29625731 - CLOSING EMPTY WORKBOOK GIVES A PROMPT TO SAVE CHANGES WHEN THERE ARE NONE)
+- The add-in now attempts to scrub connection information for imported tables to check if worksheets changed names and if so, update the connections
+  metadata. At the same time connections information for missing/deleted worksheets is removed.
+  (MySQL Bug #89387, Bug #27441407 - DATA CANNOT BE LONGER REFRESHED AFTER RENAMING OF EXCEL-SHEETS)
 
 1.3.7
 - Changed the behavior of how the "First Row Contains Column Names" selection affects the Data Type for columns. The value of the aforementioned checkbox
