Bug #29050558 - CANNOT CREATE RELATIONSHIPS ON DATA MODEL DURING IMPORT DATA FOR RELATED TABLES
- Created the List<MySqlDataRelationship>.FindTableInRelationshipsFromPivot extension method to find a possible circular reference within a given llist of relationships in arecursive way. (source/Classes/MySQLDataUtilities.cs)
- Added the CheckIfCreatesCircularReference method to find a possible circular reference within a given llist of relationships in arecursive way. Adde the GetOtherTable method to return the counterpart table name in a relationship. (source/Classes/MySqlDataRelationship.cs)
- Created the AddRelationshipsAvoidingCircularReferences method to add relationships to create only if they would not create a circular reference based on the relationships already added to the list. (source/Forms/ImportMultipleDialog.cs)

--- a/CHANGES
+++ b/CHANGES
@@ -25,6 +25,9 @@
 - The add-in now attempts to scrub connection information for imported tables to check if worksheets changed names and if so, update the connections
   metadata. At the same time connections information for missing/deleted worksheets is removed.
   (MySQL Bug #89387, Bug #27441407 - DATA CANNOT BE LONGER REFRESHED AFTER RENAMING OF EXCEL-SHEETS)
+- Modified the way relationships are created for an Import Data operation for multiple tables, so that relationships among tables that could create a
+  circular reference are not added to the Excel data model.
+  (MySQL Bug #93581, Bug #29050558 - CANNOT CREATE RELATIONSHIPS ON DATA MODEL DURING IMPORT DATA FOR RELATED TABLES)
 
 1.3.7
 - Changed the behavior of how the "First Row Contains Column Names" selection affects the Data Type for columns. The value of the aforementioned checkbox
