Bug #16239029 - IMPORT PROCEDURE DATA - INDIVIDUAL COLUMNS SELECTION SHOULD BE ALLOWED
- Added code to the ImportData method so that excluded columns are not imported. (source/Classes/DbProcedure.cs)
- Modified the ImportProcedureForm so that individual DataGridView controls are used for each result set returned by stored procedures, this way users can select individual columns from each result set to import. Added controls to show the total row count for each result set and the ability to select or unselect all columns from the grid views in a similar way currently done for tables and views. (source/Forms/ImportProcedureForm.Designer.cs, source/Forms/ImportProcedureForm.cs, source/Forms/ImportProcedureForm.resx)
- Created the ImportingRowsInfo class to unify logic to determine if importing rows exceed the worksheet's limit for all import data operations. (source/Classes/ImportingRowsInfo.cs, source/Forms/ImportProcedureForm.cs, source/Forms/ImportTableViewForm.cs, source/MySQL.ForExcel.csproj)

--- a/CHANGES
+++ b/CHANGES
@@ -28,6 +28,8 @@
 - Modified the way relationships are created for an Import Data operation for multiple tables, so that relationships among tables that could create a
   circular reference are not added to the Excel data model.
   (MySQL Bug #93581, Bug #29050558 - CANNOT CREATE RELATIONSHIPS ON DATA MODEL DURING IMPORT DATA FOR RELATED TABLES)
+- The Import Data dialog for stored procedures now allows to select individual columns to be imported from each of the returned result sets, in a similar
+  way the importing functionality works for tables and views. (Bug #16239029 - IMPORT PROCEDURE DATA - INDIVIDUAL COLUMNS SELECTION SHOULD BE ALLOWED)
 
 1.3.7
 - Changed the behavior of how the "First Row Contains Column Names" selection affects the Data Type for columns. The value of the aforementioned checkbox
