Bug #29745518 - VALUE OF '300' IS NOT VALID FOR 'VALUE' ERROR WHEN TRYING TO EDIT A TABLE'S DATA
- Created the MAXIMUM_PREVIEW_ROWS_NUMBER constant to set a consistent max limit for preview rows. Added a safeguard to ensure the max limit for preview rows is never exceeded. (source/Forms/PreviewTableViewDialog.cs)
- Reset the limit of the max limit preview rows to 100. Added a safeguard to ensure the max limit for preview rows is never exceeded. (source/Forms/ImportAdvancedOptionsDialog.cs, source/Forms/ImportAdvancedOptionsDialog.Designer.cs)
- Created the SetMaximumPreviewRowsNumber method to reset the max limit for preview rows if the settings file was manually tampered with or somehow the value in the settings was previously set so it exceeds the limit. (source/ThisAddIn.cs)
- Fixed a problem when saving advanced Import Data options where no columns are selected back on the Import Data dialog, instead of all being selected. (source/Controls/PreviewDataGridView.cs)

--- a/CHANGES
+++ b/CHANGES
@@ -30,6 +30,9 @@
   (MySQL Bug #93581, Bug #29050558 - CANNOT CREATE RELATIONSHIPS ON DATA MODEL DURING IMPORT DATA FOR RELATED TABLES)
 - The Import Data dialog for stored procedures now allows to select individual columns to be imported from each of the returned result sets, in a similar
   way the importing functionality works for tables and views. (Bug #16239029 - IMPORT PROCEDURE DATA - INDIVIDUAL COLUMNS SELECTION SHOULD BE ALLOWED)
+- Set the limit of preview rows for Import and Edit Data operations to 100 rows for consistency. The max limit was previously 1000 in the advanced options
+  for the Import Data operation (which defeats the purpose of "previewing a small amount of data"), but was correctly set to 100 in the Preview Data dialog
+  shown for Edit Data operations. (MySQL Bug #95267, Bug #29745518 - VALUE OF '300' IS NOT VALID FOR 'VALUE' ERROR WHEN TRYING TO EDIT A TABLE'S DATA)
 
 1.3.7
 - Changed the behavior of how the "First Row Contains Column Names" selection affects the Data Type for columns. The value of the aforementioned checkbox
