Bug #23218058 - AUTO-SCALING PER DPI SETTING NOT WORKING PROPERLY IN 1.3.6 RELEASE
- Updated the MySQL.Utility library with the latest version that adds some functionality to do conversions from physical pixels to Device-Independent Pixels, in order to fix problems with different DPI settings. (source/libraries/MySQL.Utility.dll)
- Fixed code in the GetOrCreateActiveCustomPane method to set the initial width of the custom pane to the one the OS calculates automatically when DPI settings are changed. Added to the CustomizeUtilityDialogs a setting of the AutoStyleableBaseForm.HandleDpiSizeConversions to signal that MySQL for Excel needs for some forms a manual calculation of pixels to assign to some Form.Size, Form.Width or Form.Height properties when DPI settings are changed. (source/ThisAddIn.cs)
- Added code to manually convert the multiplier factor for tree node elements height depending on DPI settings changes. (source/Controls/MySqlListView.cs)
- Removed the assignment of the Form.Font, since it messes up automatic handling of DPI pixels conversion for some unkown reason. (source/Forms/AboutBox.Designer.cs, source/Forms/AppendDataForm.Designer.cs, source/Forms/AppendNewColumnMappingDialog.Designer.cs,
source/Forms/EditDataDialog.Designer.cs, source/Forms/EditDataRevertDialog.Designer.cs)
- Updated code in the LoadConnections that was using a deprecated MySqlWorkbenchConnection.IsFabricManaged property. (source/Panels/WelcomePanel.cs)

--- a/CHANGES
+++ b/CHANGES
@@ -33,6 +33,8 @@
 - Set the limit of preview rows for Import and Edit Data operations to 100 rows for consistency. The max limit was previously 1000 in the advanced options
   for the Import Data operation (which defeats the purpose of "previewing a small amount of data"), but was correctly set to 100 in the Preview Data dialog
   shown for Edit Data operations. (MySQL Bug #95267, Bug #29745518 - VALUE OF '300' IS NOT VALID FOR 'VALUE' ERROR WHEN TRYING TO EDIT A TABLE'S DATA)
+- Fixed the automatic scaling of visual elements when the OS is configured with a DPI settings different than 100%.
+  (MySQL Bug #81003, Bug #23218058 - AUTO-SCALING PER DPI SETTING NOT WORKING PROPERLY IN 1.3.6 RELEASE)
 
 1.3.7
 - Changed the behavior of how the "First Row Contains Column Names" selection affects the Data Type for columns. The value of the aforementioned checkbox
