--- a/source/Panels/DBObjectSelectionPanel.resx
+++ b/source/Panels/DBObjectSelectionPanel.resx
@@ -125,7 +125,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAA
-        IQAAAk1TRnQBSQFMAgEBAwEAAUgBAgFIAQIBGAEAARgBAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFg
+        IQAAAk1TRnQBSQFMAgEBAwEAAWABAgFgAQIBGAEAARgBAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFg
         AwABGAMAAQEBAAEgBgABJP8A/wBfAAEBAwIBAwMEAQUDBAEFAwQBBQMEAQUDBAEFAwQBBQMEAQUDBAEF
         AwQBBQMEAQUDBAEFAwQBBQMEAQUDBAEFAwQBBQMCAQMDAAEBeAADCQEMAxoBJAMhATADIQEwAyEBMAMh
         ATADIQEwAyEBMAMhATADIQEwAyEBMAMhATADIQEwAyEBMAMhATADIQEwAyEBMAMaASQDCQEMFAADBgEI
@@ -135,64 +135,64 @@
         A0sBjwNLAY8DSwGPA0sBjwNLAY8DSwGPA0sBjwNLAY8DSwGPA0sBjwM+AWsDGgEkFAADEgEYAy4BSAM5
         AWADOQFgAzkBYAM5AWADOQFgAzkBYAM5AWADOQFgAzkBYAM5AWADOQFgAzkBYAM5AWADOQFgAzkBYAMu
         AUgDEgEYEAADEgEZAzsBYwNEAXkDRAF5A0QBeQNEAXkDRAF5A0QBeQNEAXkDRAF5A0QBeQNEAXkDRAF5
-        A0QBeQNEAXkDRAF5A0QBeQM7AWMDEgEZeAAB2AGmAYQB/wHVAaMBgwH/AdABoAFGAf8BzAGbAUMB/wHL
-        AZsBRAH/Ac0BnAFEAf8BzgGcAUUB/wHLAZoBQwH/AccBlgFBAf8BxgGWAUEB/wHJAZcBQgH/AckBmAFD
-        Af8BxwGWAUEB/wHCAZIBPwH/AcIBkgE+Af8BxAGTAUAB/wHIAZYBQQH/A0sBjwMhATAUAAMXASAB2AGm
+        A0QBeQNEAXkDRAF5A0QBeQM7AWMDEgEZeAAB2AGmAYQB/wHVAaMBgwH/AdABoAFDAf8BzAGbAUAB/wHL
+        AZsBQQH/Ac0BnAFBAf8BzgGcAUIB/wHLAZoBQAH/AccBlgE+Af8BxgGWAT4B/wHJAZcBPwH/AckBmAFA
+        Af8BxwGWAT4B/wHCAZIBPAH/AcIBkgE7Af8BxAGTAT0B/wHIAZYBPgH/A0sBjwMhATAUAAMXASAB2AGm
         AYQB/wHXAaUBhAH/AdYBpAGDAf8B1QGiAYIB/wHUAaEBggH/AdMBoAGBAf8B0gGfAYAB/wHRAZ4BgAH/
-        AdABnQFGAf8BzwGcAUYB/wHOAZsBRQH/Ac0BmwFFAf8BzAGaAUQB/wHLAZkBRAH/AcoBmAFDAf8ByQGX
-        AUMB/wHJAZcBQgH/AxcBIBAAAxcBIAHYAaYBhAH/AdcBpQGEAf8B1gGkAYMB/wHVAaIBggH/AdQBoQGC
-        Af8B0wGgAYEB/wHSAZ8BgAH/AdEBngGAAf8B0AGdAUYB/wHPAZwBRgH/Ac4BmwFFAf8BzQGbAUUB/wHM
-        AZoBRAH/AcsBmQFEAf8BygGYAUMB/wHJAZcBQwH/AckBlwFCAf8DFwEgeAAB2wGpAYYB/wH5AecB2AH/
+        AdABnQFDAf8BzwGcAUMB/wHOAZsBQgH/Ac0BmwFCAf8BzAGaAUEB/wHLAZkBQQH/AcoBmAFAAf8ByQGX
+        AUAB/wHJAZcBPwH/AxcBIBAAAxcBIAHYAaYBhAH/AdcBpQGEAf8B1gGkAYMB/wHVAaIBggH/AdQBoQGC
+        Af8B0wGgAYEB/wHSAZ8BgAH/AdEBngGAAf8B0AGdAUMB/wHPAZwBQwH/Ac4BmwFCAf8BzQGbAUIB/wHM
+        AZoBQQH/AcsBmQFBAf8BygGYAUAB/wHJAZcBQAH/AckBlwE/Af8DFwEgeAAB2wGpAYYB/wH5AecB2AH/
         AfAB3AHNAf8B5gHSAcEB/wHlAc8BvgH/Ae0B1gHCAf8B9AHaAcQB/wHvAdQBvQH/AeUBygGzAf8B5AHI
-        Aa8B/wHtAc0BtAH/AfMB0gG3Af8B7wHMAbAB/wHkAcMBpwH/AeMBwQGkAf8B5wHAAaMB/wHIAZYBQgH/
+        Aa8B/wHtAc0BtAH/AfMB0gG3Af8B7wHMAbAB/wHkAcMBpwH/AeMBwQGkAf8B5wHAAaMB/wHIAZYBPwH/
         A0sBjwMhATAUAAMXASAB2wGpAYYB/wH9AeoB2wH/Af0B6AHYAf8B/AHmAdQB/wH8AeQB0QH/AfwB4wHO
         Af8B/AHhAcoB/wH8Ad8BxwH/AfsB3QHEAf8B+wHcAcEB/wH7AdoBvwH/AfsB2AG8Af8B+wHXAbkB/wH6
-        AdYBtwH/AfoB1AG1Af8B9QHMAa0B/wHLAZkBRAH/AxcBIBAAAxcBIAHbAakBhgH/AfsB5gHVAf8B+wHk
+        AdYBtwH/AfoB1AG1Af8B9QHMAa0B/wHLAZkBQQH/AxcBIBAAAxcBIAHbAakBhgH/AfsB5gHVAf8B+wHk
         AdIB/wH6AeIBzwH/AfoB4AHMAf8B+QHfAckB/wH5Ad0BxQH/AfkB2wHCAf8B9wHWAbwB/wH1Ac8BswH/
-        AfUBywGuAf8B9QHJAasB/wH1AcoBqwH/AfYBzwGwAf8B9wHQAbEB/wHyAckBqQH/AcsBmQFEAf8DFwEg
+        AfUBywGuAf8B9QHJAasB/wH1AcoBqwH/AfYBzwGwAf8B9wHQAbEB/wHyAckBqQH/AcsBmQFBAf8DFwEg
         eAAB3wGtAYkB/wH9AewB3wH/Ad4BrQGMAf8B1wGqAYoB/wHRAaYBiAH/AfAB2gHHAf8B/AHjAc4B/wHd
-        AacBggH/AdYBowGAAf8B0QGhAUUB/wHvAdIBuQH/AfsB2gG/Af8B3QGiAT8B/wHWAZ4BPgH/AdEBnAE8
-        Af8B5wHBAaUB/wHJAZgBQwH/A0sBjwMhATAUAAMXASAB3wGsAYgB/wH9AewB3wH/Af0B6gHbAf8B/QHp
+        AacBggH/AdYBowGAAf8B0QGhAUIB/wHvAdIBuQH/AfsB2gG/Af8B3QGiATwB/wHWAZ4BOwH/AdEBnAE5
+        Af8B5wHBAaUB/wHJAZgBQAH/A0sBjwMhATAUAAMXASAB3wGsAYgB/wH9AewB3wH/Af0B6gHbAf8B/QHp
         AdgB/wH8AecB1QH/AfwB5QHRAf8B/AHjAc4B/wH8AeEBywH/AfwB3wHIAf8B+wHeAcUB/wH7AdwBwgH/
-        AfsB2gG/Af8B+wHZAbwB/wH7AdcBugH/AfsB1gG3Af8B9QHNAa8B/wHNAZsBRQH/AxcBIBAAAxcBIAHf
+        AfsB2gG/Af8B+wHZAbwB/wH7AdcBugH/AfsB1gG3Af8B9QHNAa8B/wHNAZsBQgH/AxcBIBAAAxcBIAHf
         AawBiAH/Af0B7AHfAf8B/QHqAdsB/wH9AekB2AH/AfwB5wHVAf8B/AHlAdEB/wH8AeMBzgH/AfwB4QHL
         Af8B+QHWAb0B/wHzAcMBpQH/AfABuQGYAf8B8AG3AZYB/wHzAb8BngH/AfgBzgGwAf8B+wHWAbcB/wH1
-        Ac0BrwH/Ac0BmwFFAf8DFwEgeAAB4gGxAYwB/wH9Ae8B4wH/Af0B7gHgAf8B/QHrAdwB/wHxAd4BzwH/
+        Ac0BrwH/Ac0BmwFCAf8DFwEgeAAB4gGxAYwB/wH9Ae8B4wH/Af0B7gHgAf8B/QHrAdwB/wHxAd4BzwH/
         AfQB4AHPAf8B/AHmAdMB/wH8AeQB0QH/AfwB4QHLAf8B8AHVAb4B/wHzAdcBvwH/AfsB3QHEAf8B+wHb
-        AcIB/wH7AdkBvQH/Ae8BzQGxAf8B6gHGAagB/wHNAZwBRQH/A0sBjwMhATAUAAMXASAB4gGwAYoB/wH9
+        AcIB/wH7AdkBvQH/Ae8BzQGxAf8B6gHGAagB/wHNAZwBQgH/A0sBjwMhATAUAAMXASAB4gGwAYoB/wH9
         Ae4B4gH/Af0B7QHfAf8B/QHrAdwB/wH9AekB2QH/AfwB5wHVAf8B+gHhAc4B/wHYAaYBhAH/AdUBowGC
-        Af8B0gGgAYEB/wHPAZ0BRgH/Ac0BmgFFAf8BygGYAUMB/wHLAZoBRgH/AfsB1wG6Af8B9gHQAbEB/wHQ
+        Af8B0gGgAYEB/wHPAZ0BQwH/Ac0BmgFCAf8BygGYAUAB/wHLAZoBQwH/AfsB1wG6Af8B9gHQAbEB/wHQ
         AZ4BgAH/AxcBIBAAAxcBIAHiAbABigH/Af0B7gHiAf8B/QHtAd8B/wH9AesB3AH/Af0B6QHZAf8B/AHn
-        AdUB/wH8AeUB0gH/AfwB4wHPAf8B+AHVAb0B/wGxARcBAAH/AbEBFwEAAf8BsQEXAQAB/wGxARcBAAH/
+        AdUB/wH8AeUB0gH/AfwB4wHPAf8B+AHVAb0B/wGxARQBAAH/AbEBFAEAAf8BsQEUAQAB/wGxARQBAAH/
         AfgBzQGwAf8B+wHXAboB/wH2AdABsQH/AdABngGAAf8DFwEgeAAB5gG0AY4B/wH9AfEB5wH/AeIBtwGb
         Af8B3gGvAY8B/wHWAaoBjQH/AfUB4gHSAf8B/AHoAdcB/wHhAbEBkAH/Ad4BqQGEAf8B1gGlAYIB/wH0
-        AdkBwwH/AfsB3wHHAf8B4AGrAYYB/wHdAaMBQgH/AdUBnwFAAf8B6gHIAaoB/wHQAZ8BRgH/A0sBjwMh
+        AdkBwwH/AfsB3wHHAf8B4AGrAYYB/wHdAaMBPwH/AdUBnwE9Af8B6gHIAaoB/wHQAZ8BQwH/A0sBjwMh
         ATAUAAMXASAB5gGzAYwB/wH9AfEB5gH/Af0B7wHjAf8B/QHtAeAB/wH9AesB3AH/Af0B6QHZAf8B+wHk
         AdIB/wHlAbkBmQH/Af0B7gHhAf8B/AHoAdcB/wH8AeIBzQH/AfsB3QHEAf8B+wHYAbsB/wHVAaUBiAH/
         AfsB2QG9Af8B9gHSAbMB/wHTAaEBgQH/AxcBIBAAAxcBIAHmAbMBjAH/Af0B8QHmAf8B/QHvAeMB/wH9
-        Ae0B4AH/Af0B6wHcAf8B/QHpAdkB/wH8AecB1gH/AfwB5QHSAf8B+AHXAcAB/wGxARcBAAH/AfMB5wHf
-        Af8B8wHnAd8B/wGxARcBAAH/AfgBzwGyAf8B+wHZAb0B/wH2AdIBswH/AdMBoQGBAf8DFwEgeAAB6QG3
+        Ae0B4AH/Af0B6wHcAf8B/QHpAdkB/wH8AecB1gH/AfwB5QHSAf8B+AHXAcAB/wGxARQBAAH/AfMB5wHf
+        Af8B8wHnAd8B/wGxARQBAAH/AfgBzwGyAf8B+wHZAb0B/wH2AdIBswH/AdMBoQGBAf8DFwEgeAAB6QG3
         AY4B/wH+AfMB6gH/Af0B8QHnAf8B/QHvAeMB/wHxAeEB1QH/AfUB5AHWAf8B/QHqAdsB/wH8AekB1wH/
         AfwB5gHTAf8B8AHZAcYB/wH0AdsBxgH/AfwB4QHKAf8B+wHfAcgB/wH7Ad0BwwH/Ae8B0QG3Af8B6wHJ
         Aa0B/wHTAaIBgQH/A0sBjwMhATAUAAMXASAB6QG2AY0B/wH+AfMB6QH/Af0B8QHmAf8B/QHvAeMB/wH9
         Ae0B4AH/Af0B6wHdAf8B/AHmAdYB/wHsAcEBnwH/Af4B8wHqAf8B/QHuAeEB/wH8AegB1wH/AfwB4gHN
         Af8B+wHdAcQB/wHaAasBjAH/AfsB2wHAAf8B9wHTAbYB/wHWAaQBgwH/AxcBIBAAAxcBIAHpAbYBjQH/
         Af4B8wHpAf8B/QHxAeYB/wH9Ae8B4wH/Af0B7QHgAf8B/QHrAd0B/wH9AekB2gH/AfwB6AHWAf8B+QHd
-        AcgB/wGxARcBAAH/AfMB5wHfAf8B8wHnAd8B/wGxARcBAAH/AfgB1AG4Af8B+wHbAcAB/wH3AdMBtgH/
+        AcgB/wGxARQBAAH/AfMB5wHfAf8B8wHnAd8B/wGxARQBAAH/AfgB1AG4Af8B+wHbAcAB/wH3AdMBtgH/
         AdYBpAGDAf8DFwEgeAAB7AG6AZAB/wH+AfUB7gH/AeIBugGfAf8B3gGyAZQB/wHWAa0BkgH/AfUB5gHa
         Af8B/QHsAd4B/wHiAbQBlQH/Ad4BrAGJAf8B1gGnAYcB/wH0Ad0BygH/AfwB4wHOAf8B4QGuAYsB/wHd
-        AaYBRgH/AdUBoQFEAf8B6wHLAbEB/wHWAaQBgwH/A0sBjwMhATAUAAMXASAB7AG5AY8B/wH+AfUB7QH/
+        AaYBQwH/AdUBoQFBAf8B6wHLAbEB/wHWAaQBgwH/A0sBjwMhATAUAAMXASAB7AG5AY8B/wH+AfUB7QH/
         AfwB7wHkAf8B2AGmAYQB/wHVAaMBggH/AdIBoAGBAf8B0QGfAYAB/wHyAccBpAH/Af4B+AHzAf8B/gHz
         AeoB/wH9Ae4B4QH/AfwB6AHXAf8B/AHiAc0B/wHhAbIBkQH/AfsB3QHEAf8B9wHVAboB/wHZAacBhQH/
         AxcBIBAAAxcBIAHsAbkBjwH/Af4B9QHtAf8B/gHzAeoB/wH9AfEB5wH/Af0B7wHkAf8B/QHuAeEB/wH9
-        AewB3QH/Af0B6gHaAf8B+wHlAdMB/wGuARYBAAH/Aa0BFQEAAf8BrgEWAQAB/wGxARcBAAH/AfoB3AHD
+        AewB3QH/Af0B6gHaAf8B+wHlAdMB/wGuARMBAAH/Aa0BEgEAAf8BrgETAQAB/wGxARQBAAH/AfoB3AHD
         Af8B+wHdAcQB/wH3AdUBugH/AdkBpwGFAf8DFwEgeAAB7wG9AZIB/wH+AfYB8QH/Af4B9QHuAf8B/gHz
         AeoB/wHyAeUB3AH/AfUB6AHdAf8B/QHuAeIB/wH9Ae0B3wH/Af0B6gHbAf8B8QHdAc0B/wH0Ad8BzgH/
         AfwB5QHSAf8B/AHjAc8B/wH8AeEBygH/Ae8B1AG9Af8B7AHNAbQB/wHaAacBhQH/A0sBjwMhATAUAAMX
         ASAB7wG8AZEB/wH+AfYB8AH/AfwB8QHnAf8B5QG5AZkB/wH9Ae4B4QH/AfwB6AHXAf8B/AHgAcoB/wH3
         Ac0BpwL/AfwB+gH/Af4B+AHzAf8B/gHzAeoB/wH9Ae4B4QH/AfwB6AHXAf8B5wG5AZUB/wH7Ad8BxwH/
         AfgB1wG9Af8B3QGqAYcB/wMXASAQAAMXASAB7wG8AZEB/wH+AfYB8AH/Af0B8QHoAf8B+wHpAd0B/wH6
-        AeQB1wH/AfkB4wHUAf8B+gHkAdUB/wH8AekB2gH/AfgB5QHZAf8B6wHYAc8B/wFAAT8BNAH/AeoB1AHJ
+        AeQB1wH/AfkB4wHUAf8B+gHkAdUB/wH8AekB2gH/AfgB5QHZAf8B6wHYAc8B/wE9ATwBMQH/AeoB1AHJ
         Af8B9wHeAcsB/wH8AeEBygH/AfsB3wHHAf8B+AHXAb0B/wHdAaoBhwH/AxcBIHgAAfIBwAGTAf8B/gH4
         AfMB/wHiAb0BpAH/Ad8BtAGYAf8B1wGwAZYB/wH2AeoB4QH/Af0B8AHmAf8B4gG3AZoB/wHeAa4BjgH/
         AdYBqgGMAf8B9QHhAdEB/wH8AegB1QH/AeEBsQGPAf8B3gGpAYQB/wHWAaQBggH/Ae0BzwG4Af8B3QGr
@@ -200,35 +200,35 @@
         Ae4B4QH/AfwB5QHSAf8B+gHGAaEB/wH9AesB5gH/Af0B6QHiAf8B/AHlAdwB/wH8AeEB1QH/AfsB3QHO
         Af8B7wG5AZYB/wH8AeEBywH/AfkB2QHBAf8B4AGuAYkB/wMXASAQAAMXASAB8gG/AZIB/wH+AfgB8wH/
         AfsB7QHkAf8B9gHXAcgB/wHzAcwBuQH/AfMBywG2Af8B9QHTAcAB/wH2AeAB1AH/AesB2wHWAf8BxAG1
-        AcYB/wEgARsBsgH/AcMBswG/Af8B6gHVAckB/wH4Ad8BzAH/AfwB4QHLAf8B+QHZAcEB/wHgAa4BiQH/
+        AcYB/wEdARgBsgH/AcMBswG/Af8B6gHVAckB/wH4Ad8BzAH/AfwB4QHLAf8B+QHZAcEB/wHgAa4BiQH/
         AxcBIHgAAfQBwwGVAf8B/gH6AfYB/wH+AfgB9AH/Af4B9wHxAf8B8gHpAeIB/wH2AewB5AH/Af4B8gHp
         Af8B/QHxAeYB/wH9Ae4B4gH/AfEB4QHUAf8B9QHkAdUB/wH9AeoB2QH/AfwB6AHWAf8B/AHlAdIB/wHw
         AdgBxAH/Ae0B0QG6Af8B4AGuAYgB/wNLAY8DIQEwFAADFwEgAfQBwgGUAf8B/gH6AfYB/wH9AfUB7gH/
-        AfIBxwGkAf8B/gH4AfMB/wH+AfMB6gH/AfsB4gHTAf8B1QEEAQAB/wHVAQQBAAH/AdUBBAEAAf8B1QEE
-        AQAB/wHVAQQBAAH/AdUBBAEAAf8B1wEMAQIB/wH8AeMBzgH/AfkB2wHDAf8B4wGxAYoB/wMXASAQAAMX
-        ASAB9AHCAZQB/wH+AfoB9gH/AfoB6wHjAf8BsQEXAQAB/wGxARcBAAH/AbEBFwEAAf8BsQEXAQAB/wH0
-        Ad4B0gH/AdABxAHRAf8BLgErAbsB/wHiAdcB2wH/AS8BKwG7Af8BzwG/AcYB/wH2AeABzwH/AfwB4wHO
+        AfIBxwGkAf8B/gH4AfMB/wH+AfMB6gH/AfsB4gHTAf8B1QEBAQAB/wHVAQEBAAH/AdUBAQEAAf8B1QEB
+        AQAB/wHVAQEBAAH/AdUBAQEAAf8B1wEJAQAB/wH8AeMBzgH/AfkB2wHDAf8B4wGxAYoB/wMXASAQAAMX
+        ASAB9AHCAZQB/wH+AfoB9gH/AfoB6wHjAf8BsQEUAQAB/wGxARQBAAH/AbEBFAEAAf8BsQEUAQAB/wH0
+        Ad4B0gH/AdABxAHRAf8BKwEoAbsB/wHiAdcB2wH/ASwBKAG7Af8BzwG/AcYB/wH2AeABzwH/AfwB4wHO
         Af8B+QHbAcMB/wHjAbEBigH/AxcBIHgAAfcBxQGWAv8B+wH5Af8B4gG+AacB/wHfAbcBnAH/AdcBsgGa
         Af8B9gHuAecB/wH+AfQB7AH/AeIBuQGfAf8B3gGxAZMB/wHWAa0BkQH/AfUB5gHYAf8B/QHrAd0B/wHi
         AbQBlAH/Ad4BqwGIAf8B1gGnAYYB/wHuAdMBvQH/AeQBsQGKAf8DSwGPAyEBMBQAAxcBIAH3AcQBlQL/
         AfsB+QH/Af4B9wHwAf8B9wHNAacC/wH8AfoB/wH+AfgB8wH/Af4B8wHqAf8B/QHuAeEB/wH8AegB1wH/
         AegBugGWAf8B/QHtAd8B/wH9AesB3AH/Af0B6QHZAf8B/AHnAdUB/wH8AeUB0gH/AfoB3gHHAf8B5wG0
-        AYwB/wMXASAQAAMXASAB9wHEAZUC/wH7AfkB/wH6Ae0B5QH/AbEBFwEAAf8B8wHnAd8B/wHzAecB3wH/
-        AbEBFwEAAf8BQAE/ATQB/wIsAb4B/wHiAdcB2wH/AfMB5wHfAf8B4gHXAdsB/wEtASsBuwH/AfgB4wHT
+        AYwB/wMXASAQAAMXASAB9wHEAZUC/wH7AfkB/wH6Ae0B5QH/AbEBFAEAAf8B8wHnAd8B/wHzAecB3wH/
+        AbEBFAEAAf8BPQE8ATEB/wIpAb4B/wHiAdcB2wH/AfMB5wHfAf8B4gHXAdsB/wEqASgBuwH/AfgB4wHT
         Af8B/AHlAdIB/wH6Ad4BxwH/AecBtAGMAf8DFwEgeAAB+QHHAZcC/wH9AfsC/wH8AfkB/wH+AfoB9wH/
         AfIB7QHoAf8B9gHvAeoB/wH+AfYB7wH/Af4B9AHtAf8B/gHyAekB/wHxAeUB2wH/AfUB5wHcAf8B/QHt
         AeEB/wH9AewB3gH/Af0B6QHZAf8B8AHcAcwB/wHuAdYBwQH/AecBtAGMAf8DSwGPAyEBMBQAAxcBIAH5
         AcYBlgL/Af0B+wL/AfgB8gH/AfoBxgGhAf8B/QHrAeYB/wH9AekB4gH/AfwB5QHcAf8B/AHhAdUB/wH7
         Ad0BzgH/Ae8BuQGXAf8B/QHvAeMB/wH9Ae0B4AH/Af0B6wHdAf8B/QHpAdkB/wH8AecB1gH/AfoB4QHL
-        Af8B6gG3AY4B/wMXASAQAAMXASAB+QHGAZYC/wH9AfsB/wH8AfIB6wH/AbEBFwEAAf8B8wHnAd8B/wHz
-        AecB3wH/AbEBFwEAAf8B+wHqAd8B/wHlAdwB5AH/ATIBQwHUAf8B4gHaAd4B/wEyAUIB1AH/AeUB1gHZ
+        Af8B6gG3AY4B/wMXASAQAAMXASAB+QHGAZYC/wH9AfsB/wH8AfIB6wH/AbEBFAEAAf8B8wHnAd8B/wHz
+        AecB3wH/AbEBFAEAAf8B+wHqAd8B/wHlAdwB5AH/AS8BQAHUAf8B4gHaAd4B/wEvAT8B1AH/AeUB1gHZ
         Af8B/QHpAdkB/wH8AecB1gH/AfoB4QHLAf8B6gG3AY4B/wMXASB4AAH6AcgBmAL/Af4B/QH/AeUBxQGx
         Af8B4wHAAakB/wHfAbcBngH/Af0B+AH0Af8B/gH4AfMB/wHlAcEBqQH/AeMBuwGiAf8B3gGyAZYB/wH8
         AfAB5gH/Af0B8AHlAf8B5AG7AaAB/wHiAbUBlwH/Ad0BrQGLAf8B9AHeAckB/wHrAbkBjwH/A0sBjwMh
-        ATAUAAMXASAB+gHHAZcC/wH+Af0B/wH9Ae8B6gH/AdUBBAEAAf8B1QEEAQAB/wHVAQQBAAH/AdUBBAEA
-        Af8B1QEEAQAB/wHVAQQBAAH/AdcBDAECAf8B/QHxAecB/wH9Ae8B5AH/Af0B7QHgAf8B/QHrAd0B/wH9
-        AeoB2gH/AfoB4wHOAf8B7QG6AZAB/wMXASAQAAMXASAB+gHHAZcC/wH+Af0B/wH+AfkB9gH/AbEBFwEA
-        Af8BsQEXAQAB/wGxARcBAAH/AbEBFwEAAf8B/QHyAeoB/wH+AfQB7QH/AeYB4AHnAf8BLQGEAeMB/wHl
+        ATAUAAMXASAB+gHHAZcC/wH+Af0B/wH9Ae8B6gH/AdUBAQEAAf8B1QEBAQAB/wHVAQEBAAH/AdUBAQEA
+        Af8B1QEBAQAB/wHVAQEBAAH/AdcBCQEAAf8B/QHxAecB/wH9Ae8B5AH/Af0B7QHgAf8B/QHrAd0B/wH9
+        AeoB2gH/AfoB4wHOAf8B7QG6AZAB/wMXASAQAAMXASAB+gHHAZcC/wH+Af0B/wH+AfkB9gH/AbEBFAEA
+        Af8BsQEUAQAB/wGxARQBAAH/AbEBFAEAAf8B/QHyAeoB/wH+AfQB7QH/AeYB4AHnAf8BKgGEAeMB/wHl
         Ad0B4gH/Af0B7QHgAf8B/QHrAd0B/wH9AeoB2gH/AfoB4wHOAf8B7QG6AZAB/wMXASB4AAH6AcgBmAb/
         Af4B/QL/Af0B/AL/AfwB+gL/AfsB9wH/Af4B+QH1Af8B/gH5AfQB/wH+AfcB8QH/Af4B9QHuAf8B/gHz
         AeoB/wH+AfIB6AH/Af0B8AHmAf8B/QHvAeMB/wH9Ae0B3wH/AfwB5QHSAf8B8AG9AZIB/wNLAY8DIQEw
@@ -236,29 +236,29 @@
         Af8B/gH1Ae0B/wH+AfMB6gH/Af4B8QHnAf8B/QHvAeQB/wH9Ae4B4QH/Af0B7AHeAf8B/AHlAdIB/wHw
         Ab0BkgH/AxcBIBAAAxcBIAH6AccBlwb/Af4B/QL/Af0B/AL/AfwB+gL/AfsB9wH/Af4B+QH1Af8B/gH4
         AfMB/wH+AfYB8AH/Af4B9QHtAf8B/gHzAeoB/wH+AfEB5wH/Af0B7wHkAf8B/QHuAeEB/wH9AewB3gH/
-        AfwB5QHSAf8B8AG9AZIB/wMXASB4AAHvAY4BOwH/AfABmwGLAf8B8QGdAY0B/wHxAZwBjQH/AfABmwGK
+        AfwB5QHSAf8B8AG9AZIB/wMXASB4AAHvAY4BOAH/AfABmwGLAf8B8QGdAY0B/wHxAZwBjQH/AfABmwGK
         Af8B8AGZAYkB/wHwAZsBiQH/AfEBnAGLAf8B8QGbAYoB/wHwAZoBiAH/AfABmAGGAf8B8AGZAYcB/wHx
-        AZoBiAH/AfABmgGHAf8B7wGYAYUB/wHvAZUBgAH/Ae8BmAFBAf8DSwGPAyEBMBQAAxcBIAHvAY0BOgH/
+        AZoBiAH/AfABmgGHAf8B7wGYAYUB/wHvAZUBgAH/Ae8BmAE+Af8DSwGPAyEBMBQAAxcBIAHvAY0BNwH/
         AfABmQGIAf8B8AGZAYgB/wHwAZgBiAH/AfABmAGHAf8B8AGYAYcB/wHwAZgBhgH/AfABmAGGAf8B8AGX
-        AYUB/wHwAZcBhQH/AfABlwGEAf8B8AGWAYQB/wHwAZYBgwH/Ae8BlgGCAf8B7wGVAYIB/wHvAZQBRgH/
-        Ae8BmAFBAf8DFwEgEAADFwEgAfABkgE9Af8B8QGhAZIB/wHxAaEBkgH/AfEBoQGRAf8B8QGhAZEB/wHx
+        AYUB/wHwAZcBhQH/AfABlwGEAf8B8AGWAYQB/wHwAZYBgwH/Ae8BlgGCAf8B7wGVAYIB/wHvAZQBQwH/
+        Ae8BmAE+Af8DFwEgEAADFwEgAfABkgE6Af8B8QGhAZIB/wHxAaEBkgH/AfEBoQGRAf8B8QGhAZEB/wHx
         AaABkAH/AfEBoAGQAf8B8QGgAY8B/wHxAZ8BjwH/AfEBnwGOAf8B8QGeAY0B/wHxAZ4BjAH/AfEBngGM
-        Af8B8QGdAYsB/wHxAZ0BigH/AfABmwGHAf8B7wGcAUMB/wMXASB4AAHeASABEgH/Ad4BIAESAf8B3gEg
-        ARIB/wHeASABEgH/Ad4BIAESAf8B3gEgARIB/wHeASABEgH/Ad4BIAESAf8B3gEgARIB/wHeASABEgH/
-        Ad4BIAESAf8B3gEgARIB/wHeASABEgH/Ad4BIAESAf8B3gEgARIB/wHeASABEgH/AeMBOQEjAf8DPgFr
-        AxoBJBQAAxIBGAHeASABEgH/Ad4BIAESAf8B3gEgARIB/wHeASABEgH/Ad4BIAESAf8B3gEgARIB/wHe
-        ASABEgH/Ad4BIAESAf8B3gEgARIB/wHeASABEgH/Ad4BIAESAf8B3gEgARIB/wHeASABEgH/Ad4BIAES
-        Af8B3gEgARIB/wHeASABEgH/AeMBOQEjAf8DEgEYEAADEgEYAd4BIAESAf8B3gEgARIB/wHeASABEgH/
-        Ad4BIAESAf8B3gEgARIB/wHeASABEgH/Ad4BIAESAf8B3gEgARIB/wHeASABEgH/Ad4BIAESAf8B3gEg
-        ARIB/wHeASABEgH/Ad4BIAESAf8B3gEgARIB/wHeASABEgH/Ad4BIAESAf8B4wE5ASMB/wMSARh4AAHV
-        AQQBAAH/AdUBBAEAAf8B1QEEAQAB/wHVAQQBAAH/AdUBBAEAAf8B1QEEAQAB/wHVAQQBAAH/AdUBBAEA
-        Af8B1QEEAQAB/wHVAQQBAAH/AdUBBAEAAf8B1QEEAQAB/wHVAQQBAAH/AdUBBAEAAf8B1QEEAQAB/wHV
-        AQQBAAH/Ad0BJAETAf8DGgEkAwkBDBQAAwYBCAHVAQQBAAH/AdUBBAEAAf8B1QEEAQAB/wHVAQQBAAH/
-        AdUBBAEAAf8B1QEEAQAB/wHVAQQBAAH/AdUBBAEAAf8B1QEEAQAB/wHVAQQBAAH/AdUBBAEAAf8B1QEE
-        AQAB/wHVAQQBAAH/AdUBBAEAAf8B1QEEAQAB/wHVAQQBAAH/Ad0BJAETAf8DBgEIEAADBgEIAdUBBAEA
-        Af8B1QEEAQAB/wHVAQQBAAH/AdUBBAEAAf8B1QEEAQAB/wHVAQQBAAH/AdUBBAEAAf8B1QEEAQAB/wHV
-        AQQBAAH/AdUBBAEAAf8B1QEEAQAB/wHVAQQBAAH/AdUBBAEAAf8B1QEEAQAB/wHVAQQBAAH/AdUBBAEA
-        Af8B3QEkARMB/wMGAQj/AP8A/wD/APAAAUIBTQE+BwABPgMAASgDAAFgAwABGAMAAQEBAAEBBQABIAEB
+        Af8B8QGdAYsB/wHxAZ0BigH/AfABmwGHAf8B7wGcAUAB/wMXASB4AAHeAR0BDwH/Ad4BHQEPAf8B3gEd
+        AQ8B/wHeAR0BDwH/Ad4BHQEPAf8B3gEdAQ8B/wHeAR0BDwH/Ad4BHQEPAf8B3gEdAQ8B/wHeAR0BDwH/
+        Ad4BHQEPAf8B3gEdAQ8B/wHeAR0BDwH/Ad4BHQEPAf8B3gEdAQ8B/wHeAR0BDwH/AeMBNgEgAf8DPgFr
+        AxoBJBQAAxIBGAHeAR0BDwH/Ad4BHQEPAf8B3gEdAQ8B/wHeAR0BDwH/Ad4BHQEPAf8B3gEdAQ8B/wHe
+        AR0BDwH/Ad4BHQEPAf8B3gEdAQ8B/wHeAR0BDwH/Ad4BHQEPAf8B3gEdAQ8B/wHeAR0BDwH/Ad4BHQEP
+        Af8B3gEdAQ8B/wHeAR0BDwH/AeMBNgEgAf8DEgEYEAADEgEYAd4BHQEPAf8B3gEdAQ8B/wHeAR0BDwH/
+        Ad4BHQEPAf8B3gEdAQ8B/wHeAR0BDwH/Ad4BHQEPAf8B3gEdAQ8B/wHeAR0BDwH/Ad4BHQEPAf8B3gEd
+        AQ8B/wHeAR0BDwH/Ad4BHQEPAf8B3gEdAQ8B/wHeAR0BDwH/Ad4BHQEPAf8B4wE2ASAB/wMSARh4AAHV
+        AQEBAAH/AdUBAQEAAf8B1QEBAQAB/wHVAQEBAAH/AdUBAQEAAf8B1QEBAQAB/wHVAQEBAAH/AdUBAQEA
+        Af8B1QEBAQAB/wHVAQEBAAH/AdUBAQEAAf8B1QEBAQAB/wHVAQEBAAH/AdUBAQEAAf8B1QEBAQAB/wHV
+        AQEBAAH/Ad0BIQEQAf8DGgEkAwkBDBQAAwYBCAHVAQEBAAH/AdUBAQEAAf8B1QEBAQAB/wHVAQEBAAH/
+        AdUBAQEAAf8B1QEBAQAB/wHVAQEBAAH/AdUBAQEAAf8B1QEBAQAB/wHVAQEBAAH/AdUBAQEAAf8B1QEB
+        AQAB/wHVAQEBAAH/AdUBAQEAAf8B1QEBAQAB/wHVAQEBAAH/Ad0BIQEQAf8DBgEIEAADBgEIAdUBAQEA
+        Af8B1QEBAQAB/wHVAQEBAAH/AdUBAQEAAf8B1QEBAQAB/wHVAQEBAAH/AdUBAQEAAf8B1QEBAQAB/wHV
+        AQEBAAH/AdUBAQEAAf8B1QEBAQAB/wHVAQEBAAH/AdUBAQEAAf8B1QEBAQAB/wHVAQEBAAH/AdUBAQEA
+        Af8B3QEhARAB/wMGAQj/AP8A/wD/APAAAUIBTQE+BwABPgMAASgDAAFgAwABGAMAAQEBAAEBBQABIAEB
         FgAD/wEACf8DAAb/AcABAAEHAwAB4AEAAQMB4AEAAQMBwAEAAQcDAAHgAQABAwHgAQABAwHAAQABBwMA
         AeABAAEDAeABAAEDAcABAAEHAwAB4AEAAQMB4AEAAQMBwAEAAQcDAAHgAQABAwHgAQABAwHAAQABBwMA
         AeABAAEDAeABAAEDAcABAAEHAwAB4AEAAQMB4AEAAQMBwAEAAQcDAAHgAQABAwHgAQABAwHAAQABBwMA
@@ -298,10 +298,22 @@
   <metadata name="SchemaLabel.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="SeparatorImage.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="SchemaPictureBox.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="UserIPLabel.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="ConnectionInfoLabel.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="ConnectionPictureBox.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="UserPictureBox.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="UserLabel.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="SeparatorImage.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="DBObjectsFilter.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
