--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -1150,4 +1150,13 @@ MySQL for Excel will automatically attempt to migrate Import and Edit Data relat
   <data name="Connection_X_32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Connection-X-32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="network_light" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\network_light.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="user_light" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\user_light.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="schema_light" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\schema_light.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
